fix a spacing issue caused by wrapping footer

--- a/assets/less/tests/css/sugar/component/info.css
+++ b/assets/less/tests/css/sugar/component/info.css
@@ -12,8 +12,8 @@
 \*------------------------------------*/
 @media (min-width: 768px) and (max-width: 983px) {
   .info {
-    margin-left: -3px;
-    margin-left: -0.1875rem;
+    margin-left: 30px;
+    margin-left: 1.875rem;
   }
   .info .list-inline > dt {
     font-size: 12px;
